// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicText component renders Empty view when given input Empty view 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    Empty view
  </Text>
</View>
`;

exports[`DynamicText component renders No data view when given input No data view 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text>
    No data view
  </Text>
</View>
`;

exports[`Other Row Content Renders the component when isAdult is false 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
    }
  }
>
  <Text
    style={
      {
        "color": "grey",
        "fontWeight": "300",
      }
    }
  >
    2022-01-12 (en)
  </Text>
  <View
    style={
      {
        "backgroundColor": "grey",
        "borderRadius": 30,
        "height": 4,
        "marginLeft": 5,
        "width": 4,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "grey",
        "borderRadius": 3,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 5,
        "padding": 1,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "color": "grey",
          "fontSize": 11,
        }
      }
    >
      All
    </Text>
  </View>
</View>
`;

exports[`Other Row Content Renders the component when isAdult is true 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
    }
  }
>
  <Text
    style={
      {
        "color": "grey",
        "fontWeight": "300",
      }
    }
  >
    2022-01-12 (en)
  </Text>
  <View
    style={
      {
        "backgroundColor": "grey",
        "borderRadius": 30,
        "height": 4,
        "marginLeft": 5,
        "width": 4,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "grey",
        "borderRadius": 3,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 5,
        "padding": 1,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "color": "grey",
          "fontSize": 11,
        }
      }
    >
      R
    </Text>
  </View>
</View>
`;

exports[`Other Row Content Renders the component when no parameter is passed 1`] = `
<View
  style={
    {
      "alignContent": "center",
      "alignItems": "center",
      "flexDirection": "row",
      "marginBottom": 4,
      "marginTop": 4,
    }
  }
>
  <Text
    style={
      {
        "color": "grey",
        "fontWeight": "300",
      }
    }
  >
    N/A (N/A)
  </Text>
  <View
    style={
      {
        "backgroundColor": "grey",
        "borderRadius": 30,
        "height": 4,
        "marginLeft": 5,
        "width": 4,
      }
    }
  />
  <View
    style={
      {
        "alignItems": "center",
        "borderColor": "grey",
        "borderRadius": 3,
        "borderWidth": 1,
        "display": "flex",
        "flexDirection": "row",
        "justifyContent": "center",
        "marginLeft": 5,
        "padding": 1,
      }
    }
  >
    <Text
      adjustsFontSizeToFit={true}
      style={
        {
          "color": "grey",
          "fontSize": 11,
        }
      }
    >
      All
    </Text>
  </View>
</View>
`;
